<resources>
    <string name="app_name">Story App</string>
    <string name="error_password">Password must be at least 8 characters long</string>
    <string name="register">Register</string>
    <string name="image_registration">Registration Image</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="selamat_datang">Welcome!</string>
    <string name="image_login">Login Image</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="buat_akun">Create Account</string>
    <string name="email_tidak_valid">Please enter a valid email!</string>
    <string name="masukan_nama_terlebih_dahulu">Please enter your name first!</string>
    <string name="masukan_email_terlebih_dahulu">Please enter your email first!</string>
    <string name="masukan_password_terlebih_dahulu">Please enter your password first!</string>
    <string name="berhasil_buat_akun">Account successfully created!</string>
    <string name="silahkan_masuk_sekarang">Please log in now</string>
    <string name="tambah_story">Add Story</string>
    <string name="detail_story">Story Details</string>
    <string name="masukan_deskripsi">Enter Description</string>
    <string name="galeri">Gallery</string>
    <string name="kamera">Camera</string>
    <string name="pilih_foto">Choose Photo</string>
    <string name="kirim">Send</string>
    <string name="tidak_ada_gambar_yang_dipilih">No image selected</string>
    <string name="masukan_deskripsi_terlebih_dahulu">Please enter a description first!</string>
    <string name="pengaturan">Settings</string>
    <string name="ubah_bahasa">Change Language</string>
    <string name="map">map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
</resources>