<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/register"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_register"
        android:contentDescription="@string/image_registration"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:src="@drawable/ic_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:labelFor="@id/ed_register_name"
        app:layout_constraintStart_toStartOf="@id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@id/img_register"/>

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/full_name"
        android:inputType="text"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        app:layout_constraintTop_toBottomOf="@id/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="8dp"
        android:labelFor="@id/ed_register_email"
        app:layout_constraintStart_toStartOf="@id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@id/ed_register_name"/>

    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="8dp"
        android:labelFor="@id/ed_register_password"
        app:layout_constraintStart_toStartOf="@id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@id/ed_register_email"/>

    <com.fuad.story_app.ui.components.MyEditText
        android:id="@+id/ed_register_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        app:layout_constraintTop_toBottomOf="@id/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/ed_register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>